err/pyf.componentized.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyf'...
Listing './lib/python3.5/site-packages/pyf/componentized'...
Listing './lib/python3.5/site-packages/pyf/componentized/builtins'...
Compiling './lib/python3.5/site-packages/pyf/componentized/builtins/joiners.py'...
***   File "./lib/python3.5/site-packages/pyf/componentized/builtins/joiners.py", line 80
    raise ValueError, "metadata not provided"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/componentized/components'...
Compiling './lib/python3.5/site-packages/pyf/componentized/components/base.py'...
***   File "./lib/python3.5/site-packages/pyf/componentized/components/base.py", line 322
    exec self.code in evaldict
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pyf/componentized/components/multiwriter.py'...
***   File "./lib/python3.5/site-packages/pyf/componentized/components/multiwriter.py", line 63
    raise ValueError, "Key type %s not supported" % key_type
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyf/componentized/components/resource.py'...
***   File "./lib/python3.5/site-packages/pyf/componentized/components/resource.py", line 30
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/componentized/configuration'...
Compiling './lib/python3.5/site-packages/pyf/componentized/configuration/fields.py'...
***   File "./lib/python3.5/site-packages/pyf/componentized/configuration/fields.py", line 54
    raise ValueError, "You should define possible values for a select list"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyf/componentized/configuration/keys.py'...
***   File "./lib/python3.5/site-packages/pyf/componentized/configuration/keys.py", line 33
    raise NotImplementedError, "Method to_xml isn't implemented for %s" % self.key
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/componentized/core'...
Listing './lib/python3.5/site-packages/pyf/componentized/error'...
Listing './lib/python3.5/site-packages/pyf/dataflow'...
Compiling './lib/python3.5/site-packages/pyf/dataflow/components.py'...
***   File "./lib/python3.5/site-packages/pyf/dataflow/components.py", line 15
    except ImportError, AttributeError:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyf/dataflow/core.py'...
***   File "./lib/python3.5/site-packages/pyf/dataflow/core.py", line 32
    raise ValueError, ("The given generator port %r does not match "
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/manager'...
Compiling './lib/python3.5/site-packages/pyf/manager/network.py'...
***   File "./lib/python3.5/site-packages/pyf/manager/network.py", line 43
    raise ValueError, "object is not serializable"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/splitter'...
Listing './lib/python3.5/site-packages/pyf/transport'...
Compiling './lib/python3.5/site-packages/pyf/transport/packets.py'...
***   File "./lib/python3.5/site-packages/pyf/transport/packets.py", line 188
    raise AttributeError, "'packet' object has no attribute '%s'" % attribute
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/warehouse'...
Listing './lib/python3.5/site-packages/pyf.componentized-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pyf.dataflow-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyf.manager-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pyf.splitter-3.1.egg-info'...
Listing './lib/python3.5/site-packages/pyf.transport-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pyf.warehouse-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pyjon'...
Listing './lib/python3.5/site-packages/pyjon/utils'...
Listing './lib/python3.5/site-packages/pyjon.utils-0.7.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
